[package]
repository = "https://github.com/Cube-OS/telemetry-db-api"
repository = "https://github.com/Cube-OS/telemetry-db-api"
name = "cubeos-telemetry-db"
version = "0.1.0"
authors = [
    "Marshall Culpepper <marshall@kubos.com>",
    "Patrick Oppel <patrick.oppel94@gmail.com>"
]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
log = "^0.4.0"
serde = "1.0"
serde_derive = "1.0"
time = "0.3"
